--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-*{
+* {
   box-sizing: border-box;
 }
 
@@ -25,9 +25,9 @@ html {
 }
 
 img {
-  max-width:100%;
+  max-width: 100%;
   height: auto;
- }
+}
 
 .row::after {
   content: "";
@@ -35,32 +35,66 @@ img {
   display: block;
 }
 
-
-.col-1 {width: 8.33%; float: left;
-  padding: 15px;}
-.col-2 {width: 16.66%; float: left;
-  padding: 15px;}
-.col-3 {width: 25%; float: left;
-  padding: 15px;}
-.col-4 {width: 33.33%; float: left;
-  padding: 15px;}
-.col-5 {width: 41.66%; float: left;
-  padding: 15px;}
-.col-6 {width: 50%; float: left;
-  padding: 15px;}
-.col-7 {width: 58.33%; float: left;
-  padding: 15px;}
-.col-8 {width: 66.66%; float: left;
-  padding: 15px;}
-.col-9 {width: 75%; float: left;
-  padding: 15px;}
-.col-10 {width: 83.33%; float: left;
-  padding: 15px;}
-.col-11 {width: 91.66%; float: left;
-  padding: 15px;}
-.col-12 {width: 100%; float: left;
-  padding: 15px;}
-
+.col-1 {
+  width: 8.33%;
+  float: left;
+  padding: 15px;
+}
+.col-2 {
+  width: 16.66%;
+  float: left;
+  padding: 15px;
+}
+.col-3 {
+  width: 25%;
+  float: left;
+  padding: 15px;
+}
+.col-4 {
+  width: 33.33%;
+  float: left;
+  padding: 15px;
+}
+.col-5 {
+  width: 41.66%;
+  float: left;
+  padding: 15px;
+}
+.col-6 {
+  width: 50%;
+  float: left;
+  padding: 15px;
+}
+.col-7 {
+  width: 58.33%;
+  float: left;
+  padding: 15px;
+}
+.col-8 {
+  width: 66.66%;
+  float: left;
+  padding: 15px;
+}
+.col-9 {
+  width: 75%;
+  float: left;
+  padding: 15px;
+}
+.col-10 {
+  width: 83.33%;
+  float: left;
+  padding: 15px;
+}
+.col-11 {
+  width: 91.66%;
+  float: left;
+  padding: 15px;
+}
+.col-12 {
+  width: 100%;
+  float: left;
+  padding: 15px;
+}
 
 .navbar {
   display: flex;
@@ -175,10 +209,7 @@ img {
 }
 
 .service-card {
-  /* flex: 50%; */
   padding: 1rem;
-
-  border-radius: 8px;
   background: linear-gradient(
         light-dark(var(--light), var(--dark)),
         light-dark(var(--light), var(--dark))
@@ -187,6 +218,41 @@ img {
     linear-gradient(45deg, var(--banana) 0%, var(--plum) 100%) border-box;
   border: solid 2px transparent;
   border-radius: 8px;
+}
+
+.car-card {
+  padding: 1rem;
+  border-radius: 8px;
+  border: solid 2px light-dark(var(--dark), var(--light));
+}
+
+.car-card img {
+  width: 100%;
+  height: auto;
+}
+
+.car-card:hover {
+  background: linear-gradient(
+        light-dark(var(--light), var(--dark)),
+        light-dark(var(--light), var(--dark))
+      )
+      padding-box,
+    linear-gradient(45deg, var(--banana) 0%, var(--plum) 100%) border-box;
+  border: solid 2px transparent;
+}
+
+.details-btn {
+  display: inline-block;
+  text-decoration: none;
+  display: inline-block;
+  font: var(--p);
+  color: light-dark(var(--light), var(--dark));
+  background-color: light-dark(var(--dark), var(--light));
+  border: solid 2px transparent;
+  border-radius: 8px;
+  padding: 8px 12px;
+  text-align: center;
+  margin-top: 8px;
 }
 
 .btn {
