--- a/css/main.css
+++ b/css/main.css
@@ -281,6 +281,16 @@ img {
   text-align: center;
 }
 
+input[type=text] {
+  width: 100%;
+  box-sizing: border-box;
+  border: 2px solid light-dark(var(--dark), var(--light));
+  border-radius: 8px;
+  font-size: 16px;
+  background-color: light-dark(var(--light), var(--dark));
+  padding: 12px 20px 12px 40px;
+}
+
 footer {
   text-align: center;
   padding: 3px;
