--- a/css/main.css
+++ b/css/main.css
@@ -316,16 +316,6 @@ label {
   display: inline-block;
 }
 
-/* input[type="submit"] {
-  background-color: var(--plum);
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  float: right;
-} */
-
 input[type="submit"]:hover {
   background-color: var(--banana);
 }
@@ -350,12 +340,29 @@ input[type="submit"]:hover {
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1000px) {
   .col-30,
   .col-70,
   input[type="submit"] {
     width: 100%;
     margin-top: 0;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  #signup-form,
+  input[type="submit"] {
+    margin-left: 300px;
+    margin-right: 300px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  #login-form {
+    margin-left: 300px;
+    margin-right: 300px;
+    margin-top: 100px;
+    margin-bottom: 100px;
   }
 }
 
