--- a/css/main.css
+++ b/css/main.css
@@ -301,6 +301,16 @@ input[type="email"] {
   padding: 12px 20px 12px 40px;
 }
 
+input[type="tel"] {
+  width: 100%;
+  box-sizing: border-box;
+  border: 2px solid light-dark(var(--dark), var(--light));
+  border-radius: 8px;
+  font-size: 16px;
+  background-color: light-dark(var(--light), var(--dark));
+  padding: 12px 20px 12px 40px;
+}
+
 input[type="password"] {
   width: 100%;
   box-sizing: border-box;
